...
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:id="@+id/textInputLayout"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="NAME" android:id="@+id/name_edit_txt"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="CURRENT AMOUNT" android:id="@+id/amount_edit_txt"/>
    </android.support.design.widget.TextInputLayout>
</android.support.constraint.ConstraintLayout>
