<resources>
    <string name="app_name">Budget</string>
    <string name="title_activity_users">UsersActivity</string>
    <string name="create_user">CREATE</string>
    <string name="cancel">CANCEL</string>
    <string name="title_activity_transaction">TransactionActivity</string>
</resources>
